insertando strategy en deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ on: [push]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-vesrsion: [15.x]
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
