--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-vesrsion: [15.x]
+        node-version: [15.x]
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
